test/expressions/diten/intWithMisplacedUnderscores.chpl
var i = 1234_56_789;
writeln(i);
